--- a/SecondProject/src/main/resources/templates/boards/readBoard.html
+++ b/SecondProject/src/main/resources/templates/boards/readBoard.html
@@ -49,9 +49,39 @@
                 <!--            <a type="button" class="btn btn-primary" th:href="@{/boards/{id}/delete(id=${boardForm.id})}">삭제</a>-->
                 <a type="button" class="btn btn-primary" th:href="@{/boards}">목록</a>
             </div>
+            <table>
+                <thead>
+                <tr>
+                    <th>
+                        <label for="content">댓글</label>
+                        <textarea class="form-control" id="content" th:field="${boardForm.content}" rows="2" cols="100"></textarea>
+                    </th>
+                </tr>
+                </thead>
+
+            </table>
         </div>
     </div>
     <hr/>
+</div>
+
+<div class="comment">
+    <hr/>
+    <div class="row">
+        <div class="col-md-10">
+            <table>
+                <thead>
+                <tr>
+                    <th>
+                        <label for="content">댓글</label>
+                        <textarea class="form-control" id="content" th:field="${boardForm.content}" rows="2"></textarea>
+                    </th>
+                </tr>
+                </thead>
+
+            </table>
+        </div>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
