--- a/SecondProject/src/main/resources/templates/users/admin/pagingMemberList.html
+++ b/SecondProject/src/main/resources/templates/users/admin/pagingMemberList.html
@@ -29,9 +29,9 @@
         <tbody>
         <tr th:each="user : ${users}">
             <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
-            <td th:text="${user.email}"></td>
+            <td> <a th:text="${user.email}" th:href="@{/admin/users/{id} (id=${user.id})}"></a></td>
             <td th:text="${user.name}"></td>
-            <td> <a th:text="${user.nickname}" th:href="@{/admin/users/{id} (id=${user.id})}"></a></td>
+            <td th:text="${user.nickname}"></td>
             <td th:text="${user.role}"></td>
         </tr>
         </tbody>
