--- a/SecondProject/src/main/resources/templates/boards/writeBoard.html
+++ b/SecondProject/src/main/resources/templates/boards/writeBoard.html
@@ -23,9 +23,11 @@
             <div class="form-group">
                 <label for="title">제목</label>
                 <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="">
+                <p th:if="${#fields.hasErrors('title')}" th:errors = "*{title}"></p>
             </div>
             <label for="content">내용</label>
             <textarea class="form-control" id="content" th:field="*{content}" rows="10"></textarea>
+            <p th:if="${#fields.hasErrors('content')}" th:errors = "*{content}"></p>
         </div>
         <div class="text-right">
             <button type="submit" class="btn btn-primary">확인</button>
