--- a/SecondProject/src/main/resources/templates/boards/readBoard.html
+++ b/SecondProject/src/main/resources/templates/boards/readBoard.html
@@ -56,34 +56,42 @@
                         <th>
                             <label for="content">댓글</label>
                             <textarea class="form-control" id="content" th:field="*{content}" rows="2" cols="100"></textarea>
+                            <p th:if="${#fields.hasErrors('content')}" th:errors = "*{content}"></p>
                         </th>
                     </tr>
                     </thead>
                 </table>
                 <div class="text-right">
                     <button type="submit" class="btn btn-primary">확인</button>
-<!--                    <a type="submit" class="btn btn-primary" th:href="@{/boards}">확인</a>-->
                 </div>
             </form>
-            <div>
-                <table class="table">
+
+            <div>총 건수 : <span th:text="${page.getTotal()}"></span></div>
+            <table class="table">
                 <thead>
                 <tr>
-<!--                    <th>번호</th>-->
-                    <th scope="col">내용</th>
-                    <th scope="col">작성자</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="comment : ${commentList}">
-<!--                    <td th:text="${comment.id}"></td>-->
+                <tr th:each="comment : ${comments}">
+                    <td th:text="${comment.nickname}"></td>
                     <td th:text="${comment.content}"></td>
-                    <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
-                    <td th:text="${comment.memberNickname}"></td>
                 </tr>
                 </tbody>
 
-                </table>
+            </table>
+            <div class="text-center">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination pagination-sm">
+                        <li th:if="${page.isPrev()}" class="page-item"><a th:href="@{/boards/{boardId}?page={page}(page = ${page.getCurPage()-1}, boardId = ${boardForm.id})}" class="page-link" href="#">Prev</a></li>
+                        <li th:unless="${page.isPrev()}" class="page-item disabled"><a class="page-link">Prev</a></li>
+                        <li class="page-item" th:each="num, index: ${#numbers.sequence(page.getStartPage(), page.getEndPage())}">
+                            <a th:href="@{/boards/{boardId}?page={page}(page = ${index.current-1}, boardId = ${boardForm.id})}" th:text="${num}" class="page-link" href="">1</a>
+                        </li>
+                        <li th:if="${page.isNext()}" class="page-item"><a th:href="@{/boards?page={page}(page = ${page.getCurPage()+1})}" class="page-link" href="#">Next</a></li>
+                        <li th:unless="${page.isNext()}" class="page-item disabled"><a class="page-link">Next</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
