--- a/SecondProject/src/main/resources/templates/orders/item/itemCreate.html
+++ b/SecondProject/src/main/resources/templates/orders/item/itemCreate.html
@@ -54,7 +54,7 @@
         </div>
         <div class="text-right">
             <button type="submit" class="btn btn-primary">확인</button>
-            <a type="button" class="btn btn-primary" th:href="@{/boards}">취소</a>
+            <a type="button" class="btn btn-primary" th:href="@{/templates/boards}">취소</a>
         </div>
     </form>
 </div>
